2006-08-28  Lars Hecking  <lhecking@users.sourceforge.net>

	* prepare: Allow importing auto* tools from the environment.

2006-08-26  Ethan A Merritt  <merritt@u.washington.edu>

	Fix program errors revealed by issuing the command sequence
	   set termoption font 'face,size'; show term
	   set termoption font 'face'; show term
	to all terminal types.

	* term/gd.trm term/svg.trm term/tgif.trm:  Accept comma-separated font
	face, size. Reset to default font size if no size information is given.

	* term/tkcanvas.trm: Fix infinite loop if unrecognized terminal option.

2006-08-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (get_3ddata): Increment the current point even if its
	value is undefined.  This allows grid spacing to be maintained, and
	correctly handles `splot ... using ($1):($2):($3)`.

	FIXME: This is only a partial solution. Deeper problems exist in the
	handling of missing/NaN/junk data values during input. In particular,
	gridding is still corrupted in the case of `splot ... using 1:2:3`.

2006-08-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (cbtick_callback): Add handling of text properties 
	associated with colorbox tic labels, making them like the other axis
	tic labels.
	Bug #1543927

2006-08-21  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc
	Sync Japanese documentation to recent changes in English files.
	(rev.1.383) 15Aug2006

2006-08-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/save.c (save_variables__sub): Do not save NaN to output file,
	since it does not print correctly.

	* src/eval.c (update_gpval_variables): Make it explicit which variables
	are updated from which context.

	* src/plot.c (main) src/util.c (int_error): Call update_gpval_variables
	on program entry and on int_error.

	Bug #1540398  (last release-critical tracker item)

2006-08-19  James R. Van Zandt  <jrvz@comcast.net>

	* term/cgm.trm: update email address
